[package]
name = "hunk"
version = "0.0.2"
authors = ["danneu"]
publish = false

[package.metadata.release]
no-dev-version = true

[dependencies]
url = "*"
hyper = "*"
tokio = "*"
tokio-core = "*"
futures = "*"
log = "*"
percent-encoding = "*"
env_logger = "*"
leak = "*"
futures-cpupool = "*"
lazy_static = "*"
flate2 = "*"
atty = "*"
unicase = "*"
colored = "*"
chrono = "*"
# Config parsing
serde = "1.0"
serde_derive = "1.0"
toml = "*"
regex = "*"
