[package]
name = "prox"
version = "0.0.3"
authors = ["danneu"]
publish = false

[package.metadata.release]
no-dev-version = true

[dependencies]
url = "*"
hyper = "*"
tokio = "*"
tokio-core = "*"
futures = "*"
log = "*"
percent-encoding = "*"
env_logger = "*"
leak = "*"
futures-cpupool = "*"
lazy_static = "*"
flate2 = "*"
atty = "*"
unicase = "*"
colored = "*"
chrono = "*"
# Config parsing
serde = "1.0"
serde_derive = "1.0"
toml = "*"

[profile.dev]
codegen-units = 4
[profile.release]
codegen-units = 4
[profile.test]
codegen-units = 4
[profile.doc]
codegen-units = 4
