[package]
name = "prox"
version = "0.0.8"
authors = ["danneu"]
publish = false

[package.metadata.release]
no-dev-version = true

[dependencies]
url = "*"
hyper = "0.11"
tokio = "0.1"
tokio-core = "0.1"
futures = "0.1"
log = "*"
percent-encoding = "*"
env_logger = "*"
leak = "*"
futures-cpupool = "*"
lazy_static = "*"
flate2 = "*"
atty = "*"
unicase = "*"
colored = "*"
chrono = "*"
# Config parsing
serde = "1.0"
serde_derive = "1.0"
toml = "*"
